Fixed horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,7 @@ html{
 }
 
 html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+    width: 100vw;
 }
 
 html::-webkit-scrollbar {
@@ -113,7 +112,8 @@ body{
     background-image: url("background.png");
     background-repeat: no-repeat;
     background-size:100% 100%;
-    height:100vh
+    height:100vh;
+    width:100vw
 }
 
 .greeting-text-wrapper{
@@ -123,7 +123,7 @@ body{
     z-index: 2;
     top:45vh;
     left:30vw;
-    width:100vw;
+    width:max-content;
     align-content: center;
     justify-content: center;
     flex-direction: column;
